fix rendering issue on iOS not proprly supporting CSS 100vh

--- a/client/src/views/Map/MapView.css
+++ b/client/src/views/Map/MapView.css
@@ -1,5 +1,5 @@
 .map-style {
-  height: calc(100vh - 82px);
+  height: calc(var(--app-height) - 82px);
 }
 
 .pin-marker {
